--- a/src/main/resources/templates/a404.html
+++ b/src/main/resources/templates/a404.html
@@ -3,68 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=1440, maximum-scale=1.0" />
-    <meta property="og:title" content="동아리 NALSSAM 지원하기">
-    <meta property="og:description" content="2021년도 동아리 NALSSAM 노예 되기">
-    <meta property="og:image" content="./img/cover.png">
-    <meta property="og:url" content="https://www.nalssam.com" />
     <link rel="shortcut icon" type="image/png" href="./img/LOGO.png" />
     <meta name="og:type" content="website" />
+    <meta name="twitter:card" content="photo" />
     <link rel="stylesheet" type="text/css" href="css/a404.css" />
-    <title>404</title>
     <style>
       @font-face {
         font-family: "SFCompact-Regular";
         font-style: normal;
         font-weight: 1 1000;
-        src: url("./fonts/SF-Compact.ttf") format("truetype");
-      }
-      @font-face {
-        font-family: "AppleSDGothicNeo-Bold";
-        font-style: normal;
-        font-weight: 1 1000;
-        src: url("./fonts/AppleSDGothicNeo-Bold.ttf") format("truetype");
-      }
-      @font-face {
-        font-family: "AppleSDGothicNeo-Light";
-        font-style: normal;
-        font-weight: 1 1000;
-        src: url("./fonts/AppleSDGothicNeo-Light.otf") format("opentype");
-      }
-      @font-face {
-        font-family: "AppleSDGothicNeo-SemiBold";
-        font-style: normal;
-        font-weight: 1 1000;
-        src: url("./fonts/AppleSDGothicNeo-SemiBold.ttf") format("truetype");
-      }
-      @font-face {
-        font-family: "AppleSDGothicNeo-Heavy";
-        font-style: normal;
-        font-weight: 1 1000;
-        src: url("./fonts/AppleSDGothicNeo-Heavy.otf") format("opentype");
-      }
-      @font-face {
-        font-family: "AppleSDGothicNeo-Regular";
-        font-style: normal;
-        font-weight: 1 1000;
-        src: url("./fonts/AppleSDGothicNeo-Regular.ttf") format("truetype");
-      }
-      @font-face {
-        font-family: "AppleSDGothicNeo-ExtraBold";
-        font-style: normal;
-        font-weight: 1 1000;
-        src: url("./fonts/AppleSDGothicNeo-ExtraBold.ttf") format("truetype");
-      }
-      @font-face {
-        font-family: "AppleSDGothicNeo-UltraLight";
-        font-style: normal;
-        font-weight: 1 1000;
-        src: url("./fonts/AppleSDGothicNeo-UltraLight.otf") format("opentype");
-      }
-      @font-face {
-        font-family: "AppleSDGothicNeo-Medium";
-        font-style: normal;
-        font-weight: 1 1000;
-        src: url("./fonts/AppleSDGothicNeo-Medium.otf") format("opentype");
+        src: url("https://anima-uploads.s3.amazonaws.com/5f02cecb95264e24c922717b/SF-Compact.ttf") format("truetype");
       }
 
       .component-wrapper a,
@@ -242,11 +190,11 @@
         <div class="group-C61RwL">
           <div class="x4-NOXmfT">4</div>
           <div class="x4-E582nk">4</div>
-          <img class="ghost-NOXmfT" src="img/404-ghost-3C0FF39D-399D-4BA7-A9BF-A8DD48DBC56F@2x.png" />
+          <img class="ghost-NOXmfT" src="img/404-ghost-69A68752-F00B-486A-A589-94C96F521CBD@2x.png" />
         </div>
         <div class="view-C61RwL"><div class="nalssam-UOcbxe nalssamlogo">NALSSAM</div></div>
         <div class="x2-C61RwL aboutnalssam">개발자는 잡니다 ㅂ2</div>
-        <img class="ester-egg-C61RwL" src="img/404-esteregg-41FB2DC6-A270-48AD-97B2-C9954EC81F92@2x.png" />
+        <img class="ester-egg-C61RwL" src="img/404-esteregg-3A7CBB45-BFF1-4FD0-B3AC-DCEF6F72E439@2x.png" />
       </div>
     </div>
   </body>
