--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -232,7 +232,6 @@
         cursor: pointer;
       }
     </style>
-    <meta name="author" content="AnimaApp.com - Design to code, Automated." />
   </head>
   <body style="margin: 0; background: rgba(255, 255, 255, 1)">
     <script>
@@ -253,54 +252,10 @@
     <input type="hidden" id="anPageName" name="page" value="index" />
     <div class="container-center-horizontal">
       <div class="index screen">
-        <div class="view-C61RwL">
-          <div class="navbar-UOcbxe">
-            <div class="hr-dIx87p"></div>
-          </div>
-          <a href="index.html"><div class="nalssam-UOcbxe nalssamlogo">NALSSAM</div></a>
-        </div>
         <div class="rectangle-C61RwL"></div>
         <a href="https://jcw87.github.io/c2-sans-fight/" target="_blank"
-          ><img class="bitmap-C61RwL" src="img/index-bitmap-0B047FAB-0AC5-4F3A-A788-222133204DFD@2x.png"
+          ><img class="bitmap-C61RwL" src="img/index-bitmap-0DE6EB4F-2A75-42C2-8740-B98904305203@2x.png"
         /></a>
-        <div class="group-11-C61RwL">
-          <div class="group-6-bAyQtV">
-            <div class="stacked-group-W8YgeY">
-              <a href="sw.html"> <div class="sw-logo-xd0wTK"></div></a>
-              <img class="line-2-xd0wTK" src="img/bm-line-3-0CB98E8B-7DD7-4CA7-A98E-654C9096F029@2x.png" />
-              <a href="bm.html"
-                ><img
-                  class="x00002-xd0wTK"
-                  src="img/sw-u110eu116cu110cu1169u11bc-u1105u1169u1100u116900002-C8BAD57E-9D4B-4694-AE23-AA289E64697F@2x.png"
-              /></a>
-              <img class="line-3-xd0wTK" src="img/bm-line-3-0CB98E8B-7DD7-4CA7-A98E-654C9096F029@2x.png" />
-              <a href="hw.html"
-                ><img
-                  class="x00001-xd0wTK"
-                  src="img/bm-u110eu116cu110cu1169u11bc-u1105u1169u1100u116900001-DC64220C-B753-410C-9435-79B8A2BC751F@2x.png"
-              /></a>
-              <img class="line-3-Hxo22Q" src="img/bm-line-3-0CB98E8B-7DD7-4CA7-A98E-654C9096F029@2x.png" />
-              <a href="bio.html"> <div class="g-slave-xd0wTK"></div></a>
-              <img class="line-3-HrtGqK" src="img/bm-line-3-0CB98E8B-7DD7-4CA7-A98E-654C9096F029@2x.png" />
-              <a href="a404.html"> <div class="cr-xd0wTK"></div></a>
-              <img class="line-3-xLcPb5" src="img/bm-line-3-0CB98E8B-7DD7-4CA7-A98E-654C9096F029@2x.png" />
-              <a href="a404.html">
-                <div class="more00000-xd0wTK">
-                  <div
-                  id="kakao-talk-channel-add-button"
-                  data-channel-public-id="_SxnLNK"
-                  data-size="large"
-                  data-support-multiple-densities="true"
-                  ></div></a></div
-              ></a>
-            </div>
-          </div>
-          <div class="click-bAyQtV moreim more">Click!</div>
-          <div class="click-zLZUBK moreim more">Click!</div>
-          <div class="click-3qshht moreim more">Click!</div>
-          <div class="click-hdKSmR moreim more">Click!</div>
-          <div class="click-waRZGu moreim more">Click!</div>
-        </div>
         <div class="nalssam-C61RwL nalssamlogoblack">NALSSAM</div>
         <div class="x-C61RwL thebig">동아리 날샘 신입생 모집.</div>
         <div class="bio-sw-hw-bm-md-C61RwL sizes">BIO, SW, HW, BM, MD 분야 모집</div>
@@ -310,16 +265,49 @@
         >
           <div class="button-C61RwL"><div class="textlabel-xHxYv9 newstyle">지원하기</div></div></a
         >
-        <div class="rectangle-VMr6Om"></div>
-        <div class="textlabel-C61RwL"><br />우리의 발자취를 느낄수 있는부분입니다.</div>
-        <div class="nalssam-VMr6Om sdultralight">NALSSAM의 타임라인을 소개합니다.</div>
+        <div class="group-6-C61RwL">
+          <div class="rectangle-PIEh7b"></div>
+          <div class="textlabel-PIEh7b"><br />우리의 발자취를 느낄수 있는부분입니다.</div>
+          <div class="nalssam-PIEh7b sdultralight">NALSSAM의 타임라인을 소개합니다.</div>
+          <div class="group-3-PIEh7b">
+            <div class="google-ads-0Wn9XG google-ads--style">Google Ads<br />넣읍시다.</div>
+            <div class="textlabel-0Wn9XG asdfad">동아리 연합</div>
+          </div>
+          <div class="group-4-PIEh7b">
+            <div class="textlabel-AFvZLD facetimestyle">􀱱</div>
+            <div class="textlabel-kk4Co4 asdfad">면접</div>
+            <div class="x20210308-202103-AFvZLD theintervuew and">2021.03.08.-2021.03.09NALSSAM 신입생 1차 선발</div>
+          </div>
+          <div class="group-2-PIEh7b">
+            <div class="rectangle-copy-vSXVhc"></div>
+            <div class="textlabel-vSXVhc sd48medium">작업을 효율적으로 피로 소모는<br />가장 최소화해서.</div>
+            <div class="nalssam-vSXVhc nalssamcr48 sd47blue sd48colorfull sdthenewenwcolor sd48newcolor sd48bold">
+              NALSSAM의 동아리실<br />
+            </div>
+            <div class="group-10-vSXVhc">
+              <div class="nalssam-yyyxtx aboutthenalssam">NALSSAM 동아리실 확인하기</div>
+            </div>
+            <div class="x3d-vSXVhc asd">
+              대전대신고등학교 유일의 3d 프린터 갔고있당, 느그들 하고싶은거 장치 없어서 못하는거 없음ㅋㅋ
+            </div>
+            <img
+              class="asdfasddfafafga-fasdfasdf00007-vSXVhc"
+              src="img/index-asdfasddfafafgasfasdfasdfasdf00007-2CF938CC-5A7D-4335-B332-89AC14E6DF46.png"
+            />
+          </div>
+          <div class="x-PIEh7b thebigwhite">시작은 미미하게...</div>
+          <img
+            class="x-DHVFwL"
+            src="img/index-u1102u1161u11afu1109u1162u11b7-u110bu1167u11abu1112u1167u11a8u110bu1170u11b8u1109u1161u110bu1175u1110u1173-F0611293-AFBD-450E-B74B-A295386320F3.png"
+          />
+        </div>
         <div class="group-5-C61RwL">
           <div class="rectangle-iZjIT4"></div>
         </div>
         <div class="group-9-C61RwL">
           <div class="rectangle-9dtg3L"></div>
         </div>
-        <div class="rectangle-mzXdH9">
+        <div class="rectangle-VMr6Om">
           <iframe
             style="border: 0; pointer-events: auto"
             id="ytplayer"
@@ -335,32 +323,7 @@
             webkitallowfullscreen="webkitallowfullscreen"
           ></iframe>
         </div>
-        <div class="group-3-C61RwL">
-          <div class="google-ads-hvAGCq google-ads--style">Google Ads<br />넣읍시다.</div>
-          <div class="textlabel-hvAGCq asdfad">동아리 연합</div>
-        </div>
-        <div class="group-4-C61RwL">
-          <div class="textlabel-KOsP6k facetimestyle">􀱱</div>
-          <div class="textlabel-aoJpZk asdfad">면접</div>
-          <div class="x20210308-202103-KOsP6k theintervuew and">2021.03.08.-2021.03.09NALSSAM 신입생 1차 선발</div>
-        </div>
-        <div class="group-2-C61RwL">
-          <div class="rectangle-copy-zUixHA"></div>
-          <div class="textlabel-zUixHA sd48medium">작업을 효율적으로피로 소모는<br />가장 최소화해서.</div>
-          <div class="nalssam-zUixHA nalssamcr48 sd47blue sd48colorfull sdthenewenwcolor sd48newcolor sd48bold">
-            NALSSAM의 동아리실<br />
-          </div>
-          <div class="group-10-zUixHA"><div class="nalssam-5v6six aboutthenalssam">NALSSAM 동아리실 확인하기</div></div>
-          <div class="x3d-zUixHA asd">
-            대전대신고등학교 유일의 3d 프린터<br />갔고있당, 느그들 하고싶은거 장치<br />없어서 못하는거 없음ㅋㅋ
-          </div>
-          <img
-            class="asdfasddfafafga-fasdfasdf00007-zUixHA"
-            src="img/index-asdfasddfafafgasfasdfasdfasdf00007-9B9CC397-CA07-479A-A559-7D2034D6C7B1.png"
-          />
-        </div>
         <div class="kakao-talk2021-pg-comp-100000-C61RwL"></div>
-        <div class="x-VMr6Om thebigwhite">시작은 미미하게...</div>
         <div class="bar-C61RwL">
           <div class="footer-enIJlq">
             <div class="group-ZXviDO">
@@ -381,12 +344,12 @@
             <div class="nalssam-Ij0EpA hw-little-fonts">공식 인스타 채널: @nalssam_sprout</div>
           </div>
         </div>
-        <div class="nalssam-mzXdH9 thebig">당신이 지원할 NALSSAM 분야는?</div>
+        <div class="nalssam-VMr6Om thebig">당신이 지원할 NALSSAM 분야는?</div>
         <div class="group-8-C61RwL">
           <div class="textlabel-3cZhlu sd21green">홍보 영상 시청하기</div>
           <div class="group-7-3cZhlu">
-            <img class="line-d71PT4" src="img/index-line-9F528F4F-3402-4507-BCD9-C496F57AC0C2@2x.png" />
-            <img class="line-6tkUdT" src="img/index-line-C62CD3CB-3F44-4BB8-B2D3-F665DCBF6EED@2x.png" />
+            <img class="line-d71PT4" src="img/index-line-18B7F976-302A-40F8-A668-727A7166160A@2x.png" />
+            <img class="line-6tkUdT" src="img/index-line-EE1BF39F-C97C-48CA-A625-7756D7CDAAED@2x.png" />
           </div>
         </div>
         <div class="the-hard-ware-C61RwL">
@@ -397,16 +360,16 @@
               <div class="hw-page-xcE9OD applesdgothicneo-normal-caribbean-green-18px">HW Page로</div>
               <img
                 class="path-copy-xcE9OD"
-                src="img/index-path-copy-D23FB032-759A-46E9-B17B-EA5761F8A713@2x.png"
+                src="img/index-path-copy-ABABCB40-7F3C-433A-B4DE-CF50C687B6AA@2x.png"
               /></div
           ></a>
           <img
             class="x2-copy-Lh8DxQ"
-            src="img/index-ub77cuc778-2-uc544ub798-copy-762ED806-F49A-4883-B177-42853B1A7AC1@2x.png"
+            src="img/index-ub77cuc778-2-uc544ub798-copy-26B8A138-2B2C-47E5-A9B9-6D722375FF71@2x.png"
           />
           <img
             class="x2-copy-xaI9EI"
-            src="img/index-ub77cuc778-2-uc544ub798-copy-762ED806-F49A-4883-B177-42853B1A7AC1@2x.png"
+            src="img/index-ub77cuc778-2-uc544ub798-copy-26B8A138-2B2C-47E5-A9B9-6D722375FF71@2x.png"
           />
         </div>
         <div class="business-C61RwL">
@@ -419,16 +382,16 @@
               <div class="bm-page-PRkrZc applesdgothicneo-normal-caribbean-green-18px">BM Page로</div>
               <img
                 class="path-copy-PRkrZc"
-                src="img/index-path-copy-D23FB032-759A-46E9-B17B-EA5761F8A713@2x.png"
+                src="img/index-path-copy-ABABCB40-7F3C-433A-B4DE-CF50C687B6AA@2x.png"
               /></div
           ></a>
           <img
             class="x2-copy-Wiaq1W"
-            src="img/index-ub77cuc778-2-uc544ub798-copy-762ED806-F49A-4883-B177-42853B1A7AC1@2x.png"
+            src="img/index-ub77cuc778-2-uc544ub798-copy-26B8A138-2B2C-47E5-A9B9-6D722375FF71@2x.png"
           />
           <img
             class="x2-copy-4IwKbr"
-            src="img/index-ub77cuc778-2-uc544ub798-copy-762ED806-F49A-4883-B177-42853B1A7AC1@2x.png"
+            src="img/index-ub77cuc778-2-uc544ub798-copy-26B8A138-2B2C-47E5-A9B9-6D722375FF71@2x.png"
           />
         </div>
         <div class="soft-ware-C61RwL">
@@ -438,19 +401,19 @@
           </div>
           <img
             class="x2-copy-Cqd0xX"
-            src="img/index-ub77cuc778-2-uc544ub798-copy-762ED806-F49A-4883-B177-42853B1A7AC1@2x.png"
+            src="img/index-ub77cuc778-2-uc544ub798-copy-26B8A138-2B2C-47E5-A9B9-6D722375FF71@2x.png"
           />
           <a href="sw.html">
             <div class="group-12-copy-Cqd0xX">
               <div class="sw-page-kzye9S applesdgothicneo-normal-caribbean-green-18px">SW Page로</div>
               <img
                 class="path-copy-kzye9S"
-                src="img/index-path-copy-D23FB032-759A-46E9-B17B-EA5761F8A713@2x.png"
+                src="img/index-path-copy-ABABCB40-7F3C-433A-B4DE-CF50C687B6AA@2x.png"
               /></div
           ></a>
           <img
             class="x2-copy-9XfIP7"
-            src="img/index-ub77cuc778-2-uc544ub798-copy-762ED806-F49A-4883-B177-42853B1A7AC1@2x.png"
+            src="img/index-ub77cuc778-2-uc544ub798-copy-26B8A138-2B2C-47E5-A9B9-6D722375FF71@2x.png"
           />
         </div>
         <div class="g-slave-C61RwL">
@@ -463,36 +426,32 @@
               <div class="bio-page-ELTpdZ applesdgothicneo-normal-caribbean-green-18px">BIO Page로</div>
               <img
                 class="path-copy-ELTpdZ"
-                src="img/index-path-copy-D23FB032-759A-46E9-B17B-EA5761F8A713@2x.png"
+                src="img/index-path-copy-ABABCB40-7F3C-433A-B4DE-CF50C687B6AA@2x.png"
               /></div
           ></a>
           <img
             class="x2-copy-AcGW2E"
-            src="img/index-ub77cuc778-2-uc544ub798-copy-762ED806-F49A-4883-B177-42853B1A7AC1@2x.png"
+            src="img/index-ub77cuc778-2-uc544ub798-copy-26B8A138-2B2C-47E5-A9B9-6D722375FF71@2x.png"
           />
           <img
             class="x2-copy-hDo3rj"
-            src="img/index-ub77cuc778-2-uc544ub798-copy-762ED806-F49A-4883-B177-42853B1A7AC1@2x.png"
+            src="img/index-ub77cuc778-2-uc544ub798-copy-26B8A138-2B2C-47E5-A9B9-6D722375FF71@2x.png"
           />
         </div>
         <img
           class="x-001-3-C61RwL"
-          src="img/index-ud68cuc800u314fu3147-uc778uc0bfub9d0-001-3-E0B5A670-DEA5-4253-88F5-D0F5F095CE6E.jpg"
+          src="img/index-ud68cuc800u314fu3147-uc778uc0bfub9d0-001-3-DA6BD70E-64D5-4EC4-9211-412EEB0C2397.jpg"
         />
         <img
           class="x001-C61RwL"
-          src="img/index-u1102u1161u11afu1109u1162u11b7-u1109u1175u11afu110cu1165u11a8-u110bu1169u1110u1161-u1109u116eu110cu1165u11bc001-19D41CA7-04CF-4C3F-B34B-6D0A80BC38DE.jpg"
-        />
-        <img
-          class="x-mzXdH9"
-          src="img/index-u1102u1161u11afu1109u1162u11b7-u110bu1167u11abu1112u1167u11a8u110bu1170u11b8u1109u1161u110bu1175u1110u1173-C91EACA5-EAA4-4605-AADF-10170159DE10.png"
+          src="img/index-u1102u1161u11afu1109u1162u11b7-u1109u1175u11afu110cu1165u11a8-u110bu1169u1110u1161-u1109u116eu110cu1165u11bc001-CBEB29D5-C932-4601-93BD-9DC8EF125186.jpg"
         />
         <a href="sw.html">
           <div class="meoeomfpamsdfoa-lddkfasdd00003-C61RwL">
             <a href="sw.html" onclick="window.event.stopPropagation()"
               ><img
                 class="meoeomfpamsdfoa-lddkfasdd00003-BhO0ex"
-                src="img/index-meoeomfpamsdfoasddfnaskdnflkasdlkfjalksjflkajsldkdfjlasjddflnasdnfoanosnvoiansdaksldflknaslkclkzkkxlcckakslddkfasdd00003-CD0FF128-994D-4D8C-A237-DEDA8A601ABC@2x.png"
+                src="img/index-meoeomfpamsdfoasddfnaskdnflkasdlkfjalksjflkajsldkdfjlasjddflnasdnfoanosnvoiansdaksldflknaslkclkzkkxlcckakslddkfasdd00003-7E3B17F7-E267-48BA-BE36-E5FA7894E128@2x.png"
             /></a></div
         ></a>
         <a href="hw.html">
@@ -500,7 +459,7 @@
             <a href="hw.html" onclick="window.event.stopPropagation()"
               ><img
                 class="meoeomfpamsdfoa-lddkfasdd00001-p45A1x"
-                src="img/index-meoeomfpamsdfoasddfnaskdnflkasdlkfjalksjflkajsldkdfjlasjddflnasdnfoanosnvoiansdaksldflknaslkclkzkkxlcckakslddkfasdd00001-BDA1A98C-C499-481E-B36B-45518A749EF4@2x.png"
+                src="img/index-meoeomfpamsdfoasddfnaskdnflkasdlkfjalksjflkajsldkdfjlasjddflnasdnfoanosnvoiansdaksldflknaslkclkzkkxlcckakslddkfasdd00001-105588AD-5FD7-45D9-8E0C-2D9550A1BB5C@2x.png"
             /></a></div
         ></a>
         <a href="bm.html">
@@ -508,7 +467,7 @@
             <a href="bm.html" onclick="window.event.stopPropagation()"
               ><img
                 class="meoeomfpamsdfoa-lddkfasdd00000-RX1U68"
-                src="img/index-meoeomfpamsdfoasddfnaskdnflkasdlkfjalksjflkajsldkdfjlasjddflnasdnfoanosnvoiansdaksldflknaslkclkzkkxlcckakslddkfasdd00000-85661A3C-C87C-4AAD-A53A-CDE3D2DC9A74@2x.png"
+                src="img/index-meoeomfpamsdfoasddfnaskdnflkasdlkfjalksjflkajsldkdfjlasjddflnasdnfoanosnvoiansdaksldflknaslkclkzkkxlcckakslddkfasdd00000-B9C57B24-5990-4771-9E80-D49D31D3D5C0@2x.png"
             /></a></div
         ></a>
         <a href="bio.html">
@@ -516,9 +475,54 @@
             <a href="bio.html" onclick="window.event.stopPropagation()"
               ><img
                 class="meoeomfpamsdfoa-lddkfasdd00002-UBpfx5"
-                src="img/index-meoeomfpamsdfoasddfnaskdnflkasdlkfjalksjflkajsldkdfjlasjddflnasdnfoanosnvoiansdaksldflknaslkclkzkkxlcckakslddkfasdd00002-6FD372AE-72C8-478B-AABE-05A3AC68D9BD@2x.png"
+                src="img/index-meoeomfpamsdfoasddfnaskdnflkasdlkfjalksjflkajsldkdfjlasjddflnasdnfoanosnvoiansdaksldflknaslkclkzkkxlcckakslddkfasdd00002-4EE75C88-BB25-41B1-B8D9-2C68A6F3A7C4@2x.png"
             /></a></div
         ></a>
+        <div class="view-C61RwL">
+          <div class="navbar-UOcbxe">
+            <div class="hr-dIx87p"></div>
+          </div>
+          <a href="index.html"><div class="nalssam-UOcbxe applesdgothicneo-heavy-normal-white-24px">NALSSAM</div></a>
+        </div>
+        <div class="group-11-C61RwL">
+          <div class="group-6-bAyQtV">
+            <div class="stacked-group-W8YgeY">
+              <a href="sw.html"> <div class="sw-logo-xd0wTK"></div></a>
+              <img class="line-2-xd0wTK" src="img/bio-line-3-2D1662E4-DF3F-4A2B-B53E-DFFED1828782@2x.png" />
+              <a href="hw.html"
+                ><img
+                  class="x00001-xd0wTK"
+                  src="img/bm-u110eu116cu110cu1169u11bc-u1105u1169u1100u116900001-5308C10B-85FD-4A3B-9076-AA7B86533778@2x.png"
+              /></a>
+              <img class="line-3-xd0wTK" src="img/bio-line-3-2D1662E4-DF3F-4A2B-B53E-DFFED1828782@2x.png" />
+              <a href="bm.html"
+                ><img
+                  class="x00002-xd0wTK"
+                  src="img/bio-u110eu116cu110cu1169u11bc-u1105u1169u1100u116900002-63FBB258-B539-4E3A-BC46-2F5BE853528D@2x.png"
+              /></a>
+              <img class="line-3-Hxo22Q" src="img/bio-line-3-2D1662E4-DF3F-4A2B-B53E-DFFED1828782@2x.png" />
+              <a href="bio.html"> <div class="g-slave-xd0wTK"></div></a>
+              <img class="line-3-HrtGqK" src="img/bio-line-3-2D1662E4-DF3F-4A2B-B53E-DFFED1828782@2x.png" />
+              <a href="a404.html"> <div class="cr-xd0wTK"></div></a>
+              <img class="line-3-xLcPb5" src="img/bio-line-3-2D1662E4-DF3F-4A2B-B53E-DFFED1828782@2x.png" />
+              <a href="a404.html">
+                <div class="more00000-xd0wTK">
+                  <a href="a404.html" onclick="window.event.stopPropagation()"
+                    ><div
+                    id="kakao-talk-channel-add-button"
+                    data-channel-public-id="_SxnLNK"
+                    data-size="large"
+                    data-support-multiple-densities="true"
+                  ></div></a></div
+              ></a>
+            </div>
+          </div>
+          <div class="click-bAyQtV moreim more">Click!</div>
+          <div class="click-zLZUBK moreim more">Click!</div>
+          <div class="click-3qshht moreim more">Click!</div>
+          <div class="click-hdKSmR moreim more">Click!</div>
+          <div class="click-waRZGu moreim more">Click!</div>
+        </div>
       </div>
     </div>
   </body>
