--- a/src/main/resources/templates/sw.html
+++ b/src/main/resources/templates/sw.html
@@ -232,7 +232,6 @@
         cursor: pointer;
       }
     </style>
-    <meta name="author" content="AnimaApp.com - Design to code, Automated." />
   </head>
   <body style="margin: 0; background: rgba(255, 255, 255, 1)">
     <script>
@@ -253,16 +252,10 @@
     <input type="hidden" id="anPageName" name="page" value="sw" />
     <div class="container-center-horizontal">
       <div class="sw screen">
-        <div class="view-C61RwL">
-          <div class="navbar-UOcbxe">
-            <div class="hr-dIx87p"></div>
-          </div>
-          <a href="index.html"><div class="nalssam-UOcbxe nalssamlogo">NALSSAM</div></a>
-        </div>
         <div class="group-3-C61RwL">
           <div class="top-word-hvAGCq">
             <div class="nalssam-sw-syxq48 sdsemi24">NALSSAM에는 항상 SW노예 필요합니다</div>
-            <div class="x-syxq48 thebig">혁신이 바탕이 되는 업무.<br />마법과도 같은 경험.</div>
+            <div class="x-syxq48 thebig">혁신이 바탕이 되는 업무<br />마법과도 같은 경험.</div>
           </div>
           <a
             href="https://docs.google.com/forms/d/e/1FAIpQLSeN4yuI6fxrqY3A1CYe7Y0yIaWwMlv7qVp9dXZnjb4Y6zYgxg/viewform?usp=sf_link"
@@ -271,18 +264,18 @@
             <div class="button-hvAGCq"><div class="textlabel-1gKIut newstyle">지원하기</div></div></a
           >
         </div>
-        <div class="img0054-C61RwL"></div>
+        <div class="img0054-C61RwL"></div><!--01074108824로 학번 이름 남기세요.-->
         <div class="textlabel-C61RwL newnew">소프트웨어의 융합과 응용을 통한 실전 경험을 쌓을 수 있는 날샘의 SW팀</div>
-        <div class="view-VMr6Om"> <!--01074108824로 학번 이름 연락해-->
-          <div class="img0058-3-5l5ivn"></div>
-          <div class="na-5l5ivn with-nalssam">당신이 꿈꾸는 모든것이 현실로.<br />NALSSAM과 함께.</div>
+        <div class="view-C61RwL">
+          <div class="img0058-3-UOcbxe"></div>
+          <div class="na-UOcbxe with-nalssam">당신이 꿈꾸는 모든것이 현실로.<br />NALSSAM과 함께.</div>
         </div>
         <div class="group-2-C61RwL">
           <div class="textlabel-zUixHA thebig">본인에게 맞는 세부 역량을 찾아보세요.</div>
-          <img class="line-5-zUixHA" src="img/bm-line-5-CD4A7D9A-ADF8-4149-8F83-6F1E7E360A48.png" />
-          <img class="line-5-sdxwGy" src="img/bm-line-5-CD4A7D9A-ADF8-4149-8F83-6F1E7E360A48.png" />
-          <img class="line-5-kTiyrb" src="img/bm-line-5-CD4A7D9A-ADF8-4149-8F83-6F1E7E360A48.png" />
-          <img class="line-5-GE0XEQ" src="img/bm-line-5-CD4A7D9A-ADF8-4149-8F83-6F1E7E360A48.png" />
+          <img class="line-5-zUixHA" src="img/sw-line-5-CAFABEED-E8AA-4496-B4B0-82B7234FEB9C.png" />
+          <img class="line-5-sdxwGy" src="img/sw-line-5-CAFABEED-E8AA-4496-B4B0-82B7234FEB9C.png" />
+          <img class="line-5-kTiyrb" src="img/sw-line-5-CAFABEED-E8AA-4496-B4B0-82B7234FEB9C.png" />
+          <img class="line-5-GE0XEQ" src="img/sw-line-5-CAFABEED-E8AA-4496-B4B0-82B7234FEB9C.png" />
           <div class="textlabel-sdxwGy sd36">대신고 인공지능 선두 동아리</div>
           <div class="image-classification-zUixHA sdmedium24">
             Image Classification을 이용한 병충해 분류 인공지능 및 다양한 프로젝트를 개발하며 인공지능 선두로 동아리로
@@ -293,19 +286,19 @@
           <div class="textlabel-kTiyrb sd36">당신의 꿈을 만드는 피지컬 컴퓨팅</div>
           <div class="hw-zUixHA sdmedium24">
             HW팀과 함께 아두이노, 라즈베리 파이 등의 피지컬 컴퓨팅을 활용하여 문제해결을 위한 개발을 진행한다.
-            <br />Hardware 팀의 개발 제품을 운영하며 SW 기술을 개발하고 구현한다. 넘치는 예산과 피지컬 컴퓨팅 부품을
+            Hardware 팀의 개발 제품을 운영하며 SW 기술을 개발하고 구현한다. 넘치는 예산과 피지컬 컴퓨팅 부품을
             활용하여 제한 받지 않고 꿈과 아이디어를 펼칠 수 있다.
           </div>
           <div class="ap-ps-zUixHA sd36">APPs</div>
           <div class="android-studio-zUixHA sdmedium24">
-            Android Studio를 사용한 앱 개발을 통한 산출물을 제작한다. 앱을 통한 서비스와 인공지능 운영 등 <br />다양한
-            분야의 앱을 다루며 앱 개발에 대한 지식과 경험을 쌓을 수 있다. 병충해 이미지 분석 앱 <br />캡칭플랜츠 등
+            Android Studio를 사용한 앱 개발을 통한 산출물을 제작한다. 앱을 통한 서비스와 인공지능 운영 등 다양한
+            분야의 앱을 다루며 앱 개발에 대한 지식과 경험을 쌓을 수 있다. 병충해 이미지 분석 앱 캡칭플랜츠 등
             다양한 앱을 개발했으며 날샘의 디자이너 등과 함께 일할 수 있다.
           </div>
           <div class="h1-webs-h1-zUixHA sd36">&lt;h1&gt; Webs &lt;/h1&gt;</div>
           <div class="x-zUixHA sdmedium24">
             지금 네가 보는 웹사이트, 날샘 손수 처음부터 만든거야. 어때?<br /><br />창업 아이템 판매 사이트 운영 및 관리,
-            웹사이트 디자인과 프론트 엔드 디자인, 백엔드 디자인, <br />서버 호스팅을 다루며 웹 개발에 대한 실전 경험을
+            웹사이트 디자인과 프론트 엔드 디자인, 백엔드 디자인, 서버 호스팅을 다루며 웹 개발에 대한 실전 경험을
             쌓을 수 있다.
           </div>
         </div>
@@ -343,27 +336,33 @@
             </div>
           </div>
         </div>
+        <div class="view-VMr6Om">
+          <div class="navbar-5l5ivn">
+            <div class="hr-P7k66u"></div>
+          </div>
+          <a href="index.html"><div class="nalssam-5l5ivn applesdgothicneo-heavy-normal-white-24px">NALSSAM</div></a>
+        </div>
         <div class="group-11-C61RwL">
           <div class="group-6-bAyQtV">
             <div class="stacked-group-W8YgeY">
               <a href="sw.html"> <div class="sw-logo-xd0wTK"></div></a>
-              <img class="line-2-xd0wTK" src="img/bm-line-3-0CB98E8B-7DD7-4CA7-A98E-654C9096F029@2x.png" />
-              <a href="bm.html"
-                ><img
-                  class="x00002-xd0wTK"
-                  src="img/sw-u110eu116cu110cu1169u11bc-u1105u1169u1100u116900002-C8BAD57E-9D4B-4694-AE23-AA289E64697F@2x.png"
-              /></a>
-              <img class="line-3-xd0wTK" src="img/bm-line-3-0CB98E8B-7DD7-4CA7-A98E-654C9096F029@2x.png" />
+              <img class="line-2-xd0wTK" src="img/bio-line-3-2D1662E4-DF3F-4A2B-B53E-DFFED1828782@2x.png" />
               <a href="hw.html"
                 ><img
                   class="x00001-xd0wTK"
-                  src="img/bm-u110eu116cu110cu1169u11bc-u1105u1169u1100u116900001-DC64220C-B753-410C-9435-79B8A2BC751F@2x.png"
+                  src="img/bm-u110eu116cu110cu1169u11bc-u1105u1169u1100u116900001-5308C10B-85FD-4A3B-9076-AA7B86533778@2x.png"
               /></a>
-              <img class="line-3-Hxo22Q" src="img/bm-line-3-0CB98E8B-7DD7-4CA7-A98E-654C9096F029@2x.png" />
+              <img class="line-3-xd0wTK" src="img/bio-line-3-2D1662E4-DF3F-4A2B-B53E-DFFED1828782@2x.png" />
+              <a href="bm.html"
+                ><img
+                  class="x00002-xd0wTK"
+                  src="img/bio-u110eu116cu110cu1169u11bc-u1105u1169u1100u116900002-63FBB258-B539-4E3A-BC46-2F5BE853528D@2x.png"
+              /></a>
+              <img class="line-3-Hxo22Q" src="img/bio-line-3-2D1662E4-DF3F-4A2B-B53E-DFFED1828782@2x.png" />
               <a href="bio.html"> <div class="g-slave-xd0wTK"></div></a>
-              <img class="line-3-HrtGqK" src="img/bm-line-3-0CB98E8B-7DD7-4CA7-A98E-654C9096F029@2x.png" />
+              <img class="line-3-HrtGqK" src="img/bio-line-3-2D1662E4-DF3F-4A2B-B53E-DFFED1828782@2x.png" />
               <a href="a404.html"> <div class="cr-xd0wTK"></div></a>
-              <img class="line-3-xLcPb5" src="img/bm-line-3-0CB98E8B-7DD7-4CA7-A98E-654C9096F029@2x.png" />
+              <img class="line-3-xLcPb5" src="img/bio-line-3-2D1662E4-DF3F-4A2B-B53E-DFFED1828782@2x.png" />
               <a href="a404.html">
                 <div class="more00000-xd0wTK">
                   <a href="a404.html" onclick="window.event.stopPropagation()"
