--- a/src/main/resources/templates/css/index.css
+++ b/src/main/resources/templates/css/index.css
@@ -15,6 +15,11 @@
   font-size: 36px;
   letter-spacing: 0.00px;
 }
+.applesdgothicneo-heavy-normal-white-24px {
+  color: var(--white);
+  font-family: "AppleSDGothicNeo-Heavy", Helvetica, Arial, serif;
+  font-size: 24px;
+}
 .applesdgothicneo-normal-caribbean-green-18px {
   color: var(--caribbean-green);
   font-family: "AppleSDGothicNeo-Light", Helvetica, Arial, serif;
@@ -47,7 +52,7 @@
 }
 .index {
   background-color: var(--white);
-  height: 8984px;
+  height: 8996px;
   overflow-x: hidden;
   position: relative;
   width: 1440px;
@@ -64,7 +69,7 @@
   top: 124px;
   width: 153px;
 }
-.index .asdfasddfafafga-fasdfasdf00007-zUixHA {
+.index .asdfasddfafafga-fasdfasdf00007-vSXVhc {
   background-color: transparent;
   height: 400px;
   left: 590px;
@@ -77,7 +82,7 @@
   height: 100px;
   left: 0px;
   position: absolute;
-  top: 8884px;
+  top: 8896px;
   width: 1440px;
 }
 .index .bio-page-ELTpdZ {
@@ -98,11 +103,11 @@
   color: var(--black);
   font-weight: 600;
   height: auto;
-  left: 605px;
+  left: 604px;
   line-height: 21px;
   position: absolute;
   text-align: center;
-  top: 363px;
+  top: 457px;
   white-space: nowrap;
   width: 232px;
 }
@@ -130,9 +135,9 @@
 .index .business-C61RwL {
   background-color: transparent;
   height: 431px;
-  left: 996px;
+  left: 992px;
   position: absolute;
-  top: 1735px;
+  top: 1837px;
   width: 206px;
 }
 .index .business-slave-Wiaq1W {
@@ -150,9 +155,9 @@
 .index .button-C61RwL {
   background-color: var(--caribbean-green);
   height: 60px;
-  left: 611px;
+  left: 610px;
   position: absolute;
-  top: 400px;
+  top: 492px;
   width: 218px;
 }
 .index .click-3qshht {
@@ -160,11 +165,11 @@
   color: var(--white);
   font-weight: 200;
   height: auto;
-  left: 609px;
+  left: 608px;
   line-height: 24px;
   position: absolute;
   text-align: left;
-  top: 120px;
+  top: 155px;
   white-space: nowrap;
   width: auto;
 }
@@ -173,11 +178,11 @@
   color: var(--white);
   font-weight: 200;
   height: auto;
-  left: 213px;
+  left: 139px;
   line-height: 24px;
   position: absolute;
   text-align: left;
-  top: 120px;
+  top: 155px;
   white-space: nowrap;
   width: auto;
 }
@@ -186,11 +191,11 @@
   color: var(--white);
   font-weight: 200;
   height: auto;
-  left: 807px;
+  left: 844px;
   line-height: 24px;
   position: absolute;
   text-align: left;
-  top: 120px;
+  top: 155px;
   white-space: nowrap;
   width: auto;
 }
@@ -199,11 +204,11 @@
   color: var(--white);
   font-weight: 200;
   height: auto;
-  left: 1005px;
+  left: 1080px;
   line-height: 24px;
   position: absolute;
   text-align: left;
-  top: 120px;
+  top: 155px;
   white-space: nowrap;
   width: auto;
 }
@@ -212,22 +217,22 @@
   color: var(--white);
   font-weight: 200;
   height: auto;
-  left: 411px;
+  left: 372px;
   line-height: 24px;
   position: absolute;
   text-align: left;
-  top: 120px;
+  top: 155px;
   white-space: nowrap;
   width: auto;
 }
 .index .cr-xd0wTK {
   background-color: transparent;
-  background-image: url(../img/bm-asdfasddfafafgasfasdfasdfasdf00007-FF9BC485-D87B-4D39-B8E2-6D653FA4CFCC@2x.png);
+  background-image: url(../img/bio-asdfasddfafafgasfasdfasdfasdf00007-AA9CB208-D745-4F8E-AB4F-085D8307EC46@2x.png);
   background-size: 100% 100%;
-  height: 97px;
+  height: 135px;
   margin: 0 0 0 50px;
   position: relative;
-  width: 97px;
+  width: 135px;
 }
 .index .footer-enIJlq {
   background-color: var(--eerie-black);
@@ -240,21 +245,21 @@
 .index .g-slave-C61RwL {
   background-color: transparent;
   height: 429px;
-  left: 745px;
+  left: 741px;
   position: absolute;
-  top: 1735px;
+  top: 1837px;
   width: 206px;
 }
 .index .g-slave-xd0wTK {
   background-color: transparent;
-  background-image: url(../img/sw-u110eu116cu110cu1169u11bc-u1105u1169u1100u116900004-0F0282D7-032D-4CC7-B765-74579D72A2AE@2x.png);
+  background-image: url(../img/bio-u110eu116cu110cu1169u11bc-u1105u1169u1100u116900004-2DCE73FC-7AD1-4DF1-B9D1-7A79D355B3DF@2x.png);
   background-size: 100% 100%;
-  height: 97px;
+  height: 135px;
   margin: 0 0 0 50px;
   position: relative;
-  width: 97px;
+  width: 135px;
 }
-.index .google-ads-hvAGCq {
+.index .google-ads-0Wn9XG {
   background-color: transparent;
   color: rgba(250,251,255,1.0);
   font-weight: 800;
@@ -278,7 +283,7 @@
   top: 0px;
   width: 131px;
 }
-.index .group-10-zUixHA {
+.index .group-10-vSXVhc {
   background-color: transparent;
   border: 1.8px solid rgba(150,150,150,1.0);
   height: 36px;
@@ -289,10 +294,10 @@
 }
 .index .group-11-C61RwL {
   background-color: transparent;
-  height: 146px;
-  left: 0px;
+  height: 190px;
+  left: -1px;
   position: absolute;
-  top: 50px;
+  top: 72px;
   width: 1442px;
 }
 .index .group-12-copy-AcGW2E {
@@ -327,45 +332,53 @@
   top: 408px;
   width: 115px;
 }
-.index .group-2-C61RwL {
+.index .group-2-PIEh7b {
   background-color: transparent;
   height: 681px;
-  left: 202px;
+  left: 245px;
   position: absolute;
-  top: 7260px;
+  top: 1356px;
   width: 1072px;
 }
-.index .group-3-C61RwL {
+.index .group-3-PIEh7b {
   background: linear-gradient(180deg, #4D58FF 0%, #2F9BFF 100%);
   background-color: transparent;
   border-radius: 39px;
   height: 827px;
-  left: 203px;
+  left: 246px;
   position: absolute;
-  top: 7969px;
+  top: 2065px;
   width: 519px;
 }
-.index .group-4-C61RwL {
+.index .group-4-PIEh7b {
   background: linear-gradient(180deg, #FFAA3D 0%, #FFDF61 100%);
   background-color: transparent;
   border-radius: 39px;
   height: 827px;
-  left: 754px;
+  left: 797px;
   position: absolute;
-  top: 7969px;
+  top: 2065px;
   width: 519px;
 }
 .index .group-5-C61RwL {
   background-color: transparent;
   height: 670px;
-  left: 186px;
+  left: 184px;
   position: absolute;
-  top: 2376px;
+  top: 2443px;
   width: 1081px;
+}
+.index .group-6-C61RwL {
+  background-color: transparent;
+  height: 2980px;
+  left: -43px;
+  position: absolute;
+  top: 5916px;
+  width: 1491px;
 }
 .index .group-6-bAyQtV {
   background-color: var(--bunker);
-  height: 146px;
+  height: 190px;
   left: 0px;
   position: absolute;
   top: 0px;
@@ -382,17 +395,17 @@
 .index .group-8-C61RwL {
   background-color: transparent;
   height: 25px;
-  left: 648px;
+  left: 644px;
   position: absolute;
-  top: 1343px;
+  top: 1445px;
   width: 172px;
 }
 .index .group-9-C61RwL {
   background-color: transparent;
   height: 679px;
-  left: 176px;
+  left: 174px;
   position: absolute;
-  top: 3091px;
+  top: 3158px;
   width: 1081px;
 }
 .index .group-ZXviDO {
@@ -436,8 +449,8 @@
   height: 1px;
   left: 0px;
   position: relative;
-  top: 52px;
-  width: 1442px;
+  top: 71px;
+  width: 1440px;
 }
 .index .hw-page-xcE9OD {
   background-color: transparent;
@@ -454,12 +467,12 @@
 }
 .index .kakao-talk2021-pg-comp-100000-C61RwL {
   background-color: transparent;
-  background-image: url(../img/index-kakaotalk20210208201052745jpg-comp-100000-62F9A77A-734D-4C47-9393-6F66A5AF0F03.png);
+  background-image: url(../img/index-kakaotalk20210208201052745jpg-comp-100000-37CF6038-FF9E-458B-9ADA-3A299689D170.png);
   background-size: 100% 100%;
   height: 627px;
-  left: 0px;
+  left: -1px;
   position: absolute;
-  top: 492px;
+  top: 596px;
   width: 1440px;
 }
 .index .line-2-xd0wTK {
@@ -516,9 +529,9 @@
 .index .meoeomfpamsdfoa-lddkfasdd00000-C61RwL {
   background-color: transparent;
   height: 291px;
-  left: 998px;
+  left: 994px;
   position: absolute;
-  top: 1414px;
+  top: 1516px;
   width: 204px;
 }
 .index .meoeomfpamsdfoa-lddkfasdd00000-RX1U68 {
@@ -532,9 +545,9 @@
 .index .meoeomfpamsdfoa-lddkfasdd00001-C61RwL {
   background-color: transparent;
   height: 291px;
-  left: 495px;
+  left: 491px;
   position: absolute;
-  top: 1414px;
+  top: 1516px;
   width: 204px;
 }
 .index .meoeomfpamsdfoa-lddkfasdd00001-p45A1x {
@@ -548,9 +561,9 @@
 .index .meoeomfpamsdfoa-lddkfasdd00002-C61RwL {
   background-color: transparent;
   height: 291px;
-  left: 747px;
+  left: 743px;
   position: absolute;
-  top: 1414px;
+  top: 1516px;
   width: 204px;
 }
 .index .meoeomfpamsdfoa-lddkfasdd00002-UBpfx5 {
@@ -572,9 +585,9 @@
 .index .meoeomfpamsdfoa-lddkfasdd00003-C61RwL {
   background-color: transparent;
   height: 291px;
-  left: 243px;
+  left: 239px;
   position: absolute;
-  top: 1414px;
+  top: 1516px;
   width: 204px;
 }
 .index .more00000-TVJ55C {
@@ -592,29 +605,16 @@
   position: relative;
   width: 84px;
 }
-.index .nalssam-5v6six {
-  background-color: transparent;
-  color: var(--white);
-  font-weight: 700;
-  height: auto;
-  left: 11px;
-  line-height: 17px;
-  position: absolute;
-  text-align: left;
-  top: 7px;
-  white-space: nowrap;
-  width: 167px;
-}
 .index .nalssam-C61RwL {
   background-color: transparent;
   color: var(--black);
   font-weight: 800;
   height: auto;
-  left: 671px;
+  left: 670px;
   line-height: 25px;
   position: absolute;
   text-align: center;
-  top: 268px;
+  top: 362px;
   white-space: nowrap;
   width: 98px;
 }
@@ -631,31 +631,44 @@
   white-space: nowrap;
   width: 170px;
 }
-.index .nalssam-UOcbxe {
-  background-color: transparent;
-  color: var(--white);
-  font-weight: 800;
-  height: auto;
-  left: 250px;
-  line-height: 17px;
-  position: absolute;
-  text-align: center;
-  top: 18px;
-  white-space: nowrap;
-  width: 65px;
-}
-.index .nalssam-VMr6Om {
+.index .nalssam-PIEh7b {
   background-color: transparent;
   color: var(--white);
   font-weight: 200;
   height: auto;
-  left: 254px;
+  left: 297px;
   line-height: 19px;
   position: absolute;
   text-align: left;
-  top: 6237px;
+  top: 333px;
   white-space: nowrap;
   width: 230px;
+}
+.index .nalssam-UOcbxe {
+  background-color: transparent;
+  font-weight: 800;
+  height: auto;
+  left: 248px;
+  letter-spacing: 0.00px;
+  line-height: 29px;
+  position: absolute;
+  text-align: center;
+  top: 22px;
+  white-space: nowrap;
+  width: 118px;
+}
+.index .nalssam-VMr6Om {
+  background-color: transparent;
+  color: var(--black);
+  font-weight: 800;
+  height: auto;
+  left: 250px;
+  line-height: 87px;
+  position: absolute;
+  text-align: center;
+  top: 1343px;
+  white-space: nowrap;
+  width: 937px;
 }
 .index .nalssam-ZXviDO {
   background-color: transparent;
@@ -670,20 +683,7 @@
   white-space: nowrap;
   width: 375px;
 }
-.index .nalssam-mzXdH9 {
-  background-color: transparent;
-  color: var(--black);
-  font-weight: 800;
-  height: auto;
-  left: 361px;
-  line-height: 72px;
-  position: absolute;
-  text-align: center;
-  top: 1241px;
-  white-space: nowrap;
-  width: 744px;
-}
-.index .nalssam-zUixHA {
+.index .nalssam-vSXVhc {
   background-color: transparent;
   color: rgba(119,41,196,1.0);
   font-weight: 700;
@@ -695,13 +695,26 @@
   top: 79px;
   width: 462px;
 }
+.index .nalssam-yyyxtx {
+  background-color: transparent;
+  color: var(--white);
+  font-weight: 700;
+  height: auto;
+  left: 11px;
+  line-height: 17px;
+  position: absolute;
+  text-align: left;
+  top: 7px;
+  white-space: nowrap;
+  width: 167px;
+}
 .index .navbar-UOcbxe {
   background-color: var(--cod-gray);
-  height: 53px;
+  height: 72px;
   left: 0px;
   position: absolute;
   top: 0px;
-  width: 1442px;
+  width: 1440px;
 }
 .index .path-copy-ELTpdZ {
   background-color: transparent;
@@ -746,20 +759,29 @@
 .index .rectangle-C61RwL {
   background-color: rgba(242,242,242,1.0);
   height: 1518px;
-  left: 3px;
+  left: 1px;
   position: absolute;
-  top: 2318px;
+  top: 2385px;
   width: 1439px;
 }
-.index .rectangle-VMr6Om {
+.index .rectangle-PIEh7b {
   background-color: var(--black);
   height: 2980px;
-  left: 0px;
+  left: 43px;
   position: absolute;
-  top: 5904px;
+  top: 0px;
   width: 1440px;
 }
-.index .rectangle-copy-zUixHA {
+.index .rectangle-VMr6Om {
+  background-color: transparent;
+  height: 679px;
+  left: 141px;
+  overflow: hidden;
+  position: absolute;
+  top: 3158px;
+  width: 1158px;
+}
+.index .rectangle-copy-vSXVhc {
   background: linear-gradient(134deg, #B474FF 0%, #6B3ED0 100%);
   background-color: transparent;
   border-radius: 39px;
@@ -777,21 +799,12 @@
   top: 0px;
   width: 1080px;
 }
-.index .rectangle-mzXdH9 {
-  background-color: transparent;
-  height: 679px;
-  left: 143px;
-  overflow: hidden;
-  position: absolute;
-  top: 3091px;
-  width: 1158px;
-}
 .index .soft-ware-C61RwL {
   background-color: transparent;
   height: 430px;
-  left: 243px;
+  left: 239px;
   position: absolute;
-  top: 1735px;
+  top: 1837px;
   width: 206px;
 }
 .index .soft-ware-slave-Cqd0xX {
@@ -811,21 +824,21 @@
   background-color: transparent;
   display: flex;
   flex-direction: row;
-  height: 97px;
+  height: 135px;
   justify-content: flex-start;
-  left: 183px;
+  left: 92px;
   position: relative;
   top: 23px;
   width: auto;
 }
 .index .sw-logo-xd0wTK {
   background-color: transparent;
-  background-image: url(../img/sw-swlogo-CDA1FCD5-FC09-4C68-B38C-EFADE8323762@2x.png);
+  background-image: url(../img/hw-swlogo-E686EA96-EA4C-4FED-9A47-FBE30F28EC2D@2x.png);
   background-size: 100% 100%;
-  height: 97px;
+  height: 130px;
   margin: 0;
   position: relative;
-  width: 97px;
+  width: 130px;
 }
 .index .sw-page-kzye9S {
   background-color: transparent;
@@ -840,6 +853,19 @@
   white-space: nowrap;
   width: 112px;
 }
+.index .textlabel-0Wn9XG {
+  background-color: transparent;
+  color: var(--white);
+  font-weight: 700;
+  height: auto;
+  left: 48px;
+  line-height: 21px;
+  position: absolute;
+  text-align: left;
+  top: 46px;
+  white-space: nowrap;
+  width: 83px;
+}
 .index .textlabel-3cZhlu {
   background-color: transparent;
   color: var(--caribbean-green);
@@ -853,6 +879,19 @@
   white-space: nowrap;
   width: 157px;
 }
+.index .textlabel-AFvZLD {
+  background-color: transparent;
+  color: var(--white);
+  font-weight: 457.8999;
+  height: auto;
+  left: 147px;
+  line-height: 233px;
+  position: absolute;
+  text-align: left;
+  top: 166px;
+  white-space: nowrap;
+  width: 241px;
+}
 .index .textlabel-AcGW2E {
   background-color: transparent;
   color: var(--black);
@@ -864,21 +903,6 @@
   text-align: left;
   top: 124px;
   width: 170px;
-}
-.index .textlabel-C61RwL {
-  background-color: transparent;
-  color: var(--white);
-  font-family: "AppleSDGothicNeo-Medium", Helvetica, Arial, serif;
-  font-size: 48px;
-  font-weight: 500;
-  height: auto;
-  left: 254px;
-  letter-spacing: -1.80px;
-  line-height: 57px;
-  position: absolute;
-  text-align: left;
-  top: 6050px;
-  width: 508px;
 }
 .index .textlabel-Cqd0xX {
   background-color: transparent;
@@ -892,18 +916,20 @@
   top: 124px;
   width: 171px;
 }
-.index .textlabel-KOsP6k {
+.index .textlabel-PIEh7b {
   background-color: transparent;
   color: var(--white);
-  font-weight: 457.8999;
+  font-family: "AppleSDGothicNeo-Medium", Helvetica, Arial, serif;
+  font-size: 48px;
+  font-weight: 500;
   height: auto;
-  left: 147px;
-  line-height: 233px;
+  left: 297px;
+  letter-spacing: -1.80px;
+  line-height: 57px;
   position: absolute;
   text-align: left;
-  top: 166px;
-  white-space: nowrap;
-  width: 241px;
+  top: 146px;
+  width: 508px;
 }
 .index .textlabel-Wiaq1W {
   background-color: transparent;
@@ -917,7 +943,7 @@
   top: 124px;
   width: 170px;
 }
-.index .textlabel-aoJpZk {
+.index .textlabel-kk4Co4 {
   background-color: transparent;
   color: var(--white);
   font-weight: 700;
@@ -929,19 +955,6 @@
   top: 46px;
   white-space: nowrap;
   width: 32px;
-}
-.index .textlabel-hvAGCq {
-  background-color: transparent;
-  color: var(--white);
-  font-weight: 700;
-  height: auto;
-  left: 48px;
-  line-height: 21px;
-  position: absolute;
-  text-align: left;
-  top: 46px;
-  white-space: nowrap;
-  width: 83px;
 }
 .index .textlabel-mmDlSt {
   background-color: transparent;
@@ -956,6 +969,18 @@
   white-space: nowrap;
   width: 68px;
 }
+.index .textlabel-vSXVhc {
+  background-color: transparent;
+  color: var(--white);
+  font-weight: 800;
+  height: auto;
+  left: 91px;
+  line-height: 57px;
+  position: absolute;
+  text-align: left;
+  top: 137px;
+  width: 350px;
+}
 .index .textlabel-xHxYv9 {
   background-color: transparent;
   color: var(--white);
@@ -969,33 +994,21 @@
   white-space: nowrap;
   width: 184px;
 }
-.index .textlabel-zUixHA {
-  background-color: transparent;
-  color: var(--white);
-  font-weight: 800;
-  height: auto;
-  left: 91px;
-  line-height: 57px;
-  position: absolute;
-  text-align: left;
-  top: 137px;
-  width: 327px;
-}
 .index .the-hard-ware-C61RwL {
   background-color: transparent;
   height: 429px;
-  left: 494px;
+  left: 490px;
   position: absolute;
-  top: 1736px;
+  top: 1838px;
   width: 206px;
 }
 .index .view-C61RwL {
   background-color: transparent;
-  height: 53px;
+  height: 72px;
   left: 0px;
   position: absolute;
   top: 0px;
-  width: 1442px;
+  width: 1440px;
 }
 .index .vr-copy-ZXviDO {
   background-color: var(--tundora);
@@ -1024,9 +1037,9 @@
 .index .x-001-3-C61RwL {
   background-color: transparent;
   height: 671px;
-  left: 186px;
+  left: 184px;
   position: absolute;
-  top: 2375px;
+  top: 2442px;
   width: 1081px;
 }
 .index .x-C61RwL {
@@ -1034,24 +1047,32 @@
   color: var(--black);
   font-weight: 800;
   height: auto;
-  left: 462px;
-  line-height: 72px;
+  left: 373px;
+  line-height: 87px;
   position: absolute;
   text-align: center;
-  top: 288px;
+  top: 381px;
   white-space: nowrap;
-  width: 514px;
+  width: 694px;
 }
-.index .x-VMr6Om {
+.index .x-DHVFwL {
+  background-color: transparent;
+  height: 913px;
+  left: 0px;
+  position: absolute;
+  top: 317px;
+  width: 1491px;
+}
+.index .x-PIEh7b {
   background-color: transparent;
   color: var(--white);
   font-weight: 800;
   height: auto;
-  left: 255px;
+  left: 298px;
   line-height: 57px;
   position: absolute;
   text-align: center;
-  top: 6050px;
+  top: 146px;
   white-space: nowrap;
   width: 340px;
 }
@@ -1068,34 +1089,26 @@
   white-space: nowrap;
   width: 265px;
 }
-.index .x-mzXdH9 {
-  background-color: transparent;
-  height: 913px;
-  left: -43px;
-  position: absolute;
-  top: 6221px;
-  width: 1491px;
-}
 .index .x00001-xd0wTK {
   background-color: transparent;
-  height: 97px;
+  height: 135px;
   margin: 0 0 0 50px;
   position: relative;
-  width: 97px;
+  width: 135px;
 }
 .index .x00002-xd0wTK {
   background-color: transparent;
-  height: 97px;
+  height: 135px;
   margin: 0 0 0 50px;
   position: relative;
-  width: 97px;
+  width: 135px;
 }
 .index .x001-C61RwL {
   background-color: transparent;
   height: 2019px;
-  left: -7px;
+  left: -13px;
   position: absolute;
-  top: 3884px;
+  top: 3903px;
   width: 1454px;
 }
 .index .x010-29-ZXviDO {
@@ -1201,7 +1214,7 @@
   top: 361px;
   width: 205px;
 }
-.index .x20210308-202103-KOsP6k {
+.index .x20210308-202103-AFvZLD {
   background-color: transparent;
   color: var(--white);
   font-weight: 600;
@@ -1213,7 +1226,7 @@
   top: 484px;
   width: 400px;
 }
-.index .x3d-zUixHA {
+.index .x3d-vSXVhc {
   background-color: transparent;
   color: var(--white);
   font-weight: 700;
@@ -1331,8 +1344,8 @@
 }
 .thebig {
   font-family: "AppleSDGothicNeo-ExtraBold", Helvetica, Arial, serif;
-  font-size: 60px;
-  letter-spacing: -4.50px;
+  font-size: 72px;
+  letter-spacing: -5.40px;
 }
 .thebigwhite {
   font-family: "AppleSDGothicNeo-Heavy", Helvetica, Arial, serif;
