--- a/src/main/resources/templates/css/sw.css
+++ b/src/main/resources/templates/css/sw.css
@@ -15,6 +15,11 @@
   font-size: 36px;
   letter-spacing: 0.00px;
 }
+.applesdgothicneo-heavy-normal-white-24px {
+  color: var(--white);
+  font-family: "AppleSDGothicNeo-Heavy", Helvetica, Arial, serif;
+  font-size: 24px;
+}
 .applesdgothicneo-normal-caribbean-green-18px {
   color: var(--caribbean-green);
   font-family: "AppleSDGothicNeo-Light", Helvetica, Arial, serif;
@@ -151,7 +156,7 @@
 }
 .sw {
   background-color: var(--white);
-  height: 4523px;
+  height: 4864px;
   overflow-x: hidden;
   position: relative;
   width: 1440px;
@@ -173,25 +178,25 @@
   color: var(--black);
   font-weight: 500;
   height: auto;
-  left: 13px;
+  left: 50px;
   line-height: 29px;
   position: absolute;
   text-align: left;
-  top: 899px;
-  width: auto;
+  top: 1024px;
+  width: 862px;
 }
 .sw .ap-ps-zUixHA {
   background-color: transparent;
   color: var(--black);
   font-weight: 700;
   height: auto;
-  left: 13px;
+  left: 50px;
   line-height: 43px;
   position: absolute;
   text-align: left;
-  top: 841px;
+  top: 956px;
   white-space: nowrap;
-  width: auto;
+  width: 72px;
 }
 .sw .bar-SHDHHB {
   background-color: transparent;
@@ -204,9 +209,9 @@
 .sw .button-hvAGCq {
   background-color: var(--caribbean-green);
   height: 60px;
-  left: 151px;
+  left: 203px;
   position: absolute;
-  top: 184px;
+  top: 199px;
   width: 218px;
 }
 .sw .click-3qshht {
@@ -214,11 +219,11 @@
   color: var(--white);
   font-weight: 200;
   height: auto;
-  left: 609px;
+  left: 608px;
   line-height: 24px;
   position: absolute;
   text-align: left;
-  top: 120px;
+  top: 155px;
   white-space: nowrap;
   width: auto;
 }
@@ -227,11 +232,11 @@
   color: var(--white);
   font-weight: 200;
   height: auto;
-  left: 213px;
+  left: 139px;
   line-height: 24px;
   position: absolute;
   text-align: left;
-  top: 120px;
+  top: 155px;
   white-space: nowrap;
   width: auto;
 }
@@ -240,11 +245,11 @@
   color: var(--white);
   font-weight: 200;
   height: auto;
-  left: 807px;
+  left: 844px;
   line-height: 24px;
   position: absolute;
   text-align: left;
-  top: 120px;
+  top: 155px;
   white-space: nowrap;
   width: auto;
 }
@@ -253,11 +258,11 @@
   color: var(--white);
   font-weight: 200;
   height: auto;
-  left: 1005px;
+  left: 1080px;
   line-height: 24px;
   position: absolute;
   text-align: left;
-  top: 120px;
+  top: 155px;
   white-space: nowrap;
   width: auto;
 }
@@ -266,22 +271,22 @@
   color: var(--white);
   font-weight: 200;
   height: auto;
-  left: 411px;
+  left: 372px;
   line-height: 24px;
   position: absolute;
   text-align: left;
-  top: 120px;
+  top: 155px;
   white-space: nowrap;
   width: auto;
 }
 .sw .cr-xd0wTK {
   background-color: transparent;
-  background-image: url(../img/bm-asdfasddfafafgasfasdfasdfasdf00007-FF9BC485-D87B-4D39-B8E2-6D653FA4CFCC@2x.png);
+  background-image: url(../img/bio-asdfasddfafafgasfasdfasdfasdf00007-AA9CB208-D745-4F8E-AB4F-085D8307EC46@2x.png);
   background-size: 100% 100%;
-  height: 97px;
+  height: 135px;
   margin: 0 0 0 50px;
   position: relative;
-  width: 97px;
+  width: 135px;
 }
 .sw .footer-fNGuiB {
   background-color: var(--eerie-black);
@@ -293,19 +298,19 @@
 }
 .sw .g-slave-xd0wTK {
   background-color: transparent;
-  background-image: url(../img/sw-u110eu116cu110cu1169u11bc-u1105u1169u1100u116900004-0F0282D7-032D-4CC7-B765-74579D72A2AE@2x.png);
+  background-image: url(../img/bio-u110eu116cu110cu1169u11bc-u1105u1169u1100u116900004-2DCE73FC-7AD1-4DF1-B9D1-7A79D355B3DF@2x.png);
   background-size: 100% 100%;
-  height: 97px;
+  height: 135px;
   margin: 0 0 0 50px;
   position: relative;
-  width: 97px;
+  width: 135px;
 }
 .sw .group-11-C61RwL {
   background-color: transparent;
-  height: 146px;
+  height: 190px;
   left: 0px;
   position: absolute;
-  top: 50px;
+  top: 72px;
   width: 1442px;
 }
 .sw .group-15-SHDHHB {
@@ -320,23 +325,23 @@
 }
 .sw .group-2-C61RwL {
   background-color: transparent;
-  height: 1290px;
-  left: 245px;
+  height: 1452px;
+  left: 229px;
   position: absolute;
-  top: 2263px;
-  width: 946px;
+  top: 2393px;
+  width: 983px;
 }
 .sw .group-3-C61RwL {
   background-color: transparent;
-  height: 244px;
-  left: 460px;
+  height: 259px;
+  left: 408px;
   position: absolute;
-  top: 309px;
-  width: 521px;
+  top: 362px;
+  width: 625px;
 }
 .sw .group-6-bAyQtV {
   background-color: var(--bunker);
-  height: 146px;
+  height: 190px;
   left: 0px;
   position: absolute;
   top: 0px;
@@ -355,13 +360,21 @@
   color: var(--black);
   font-weight: 700;
   height: auto;
-  left: 13px;
+  left: 50px;
   line-height: 43px;
   position: absolute;
   text-align: left;
-  top: 1116px;
+  top: 1266px;
   white-space: nowrap;
-  width: auto;
+  width: 224px;
+}
+.sw .hr-P7k66u {
+  background-color: var(--mine-shaft);
+  height: 1px;
+  left: 0px;
+  position: relative;
+  top: 71px;
+  width: 1440px;
 }
 .sw .hr-PZ5l3E {
   background-color: var(--tundora-2);
@@ -370,14 +383,6 @@
   position: absolute;
   top: 39px;
   width: 947px;
-}
-.sw .hr-dIx87p {
-  background-color: var(--mine-shaft);
-  height: 1px;
-  left: 0px;
-  position: relative;
-  top: 52px;
-  width: 1440px;
 }
 .sw .hr-i7hrr4 {
   background-color: var(--tundora-2);
@@ -392,11 +397,11 @@
   color: var(--black);
   font-weight: 500;
   height: auto;
-  left: 12px;
+  left: 49px;
   line-height: 29px;
   position: absolute;
   text-align: left;
-  top: 624px;
+  top: 715px;
   width: 928px;
 }
 .sw .image-classification-zUixHA {
@@ -404,26 +409,26 @@
   color: var(--black);
   font-weight: 500;
   height: auto;
-  left: 13px;
+  left: 50px;
   line-height: 29px;
   position: absolute;
   text-align: left;
-  top: 291px;
+  top: 344px;
   width: 927px;
 }
 .sw .img0054-C61RwL {
   background-color: transparent;
-  background-image: url(../img/sw-img0054-6E7F341D-2C2D-4E7A-8F4A-4D82C0D831C0.png);
+  background-image: url(../img/sw-img0054-38B2965C-DC76-4C49-A0A4-06F371510765.png);
   background-size: 100% 100%;
   height: 595px;
   left: 0px;
   position: absolute;
-  top: 647px;
+  top: 728px;
   width: 1440px;
 }
-.sw .img0058-3-5l5ivn {
+.sw .img0058-3-UOcbxe {
   background-color: transparent;
-  background-image: url(../img/sw-img0058-3-043A309C-9641-46FB-AC56-06D8640AC141.png);
+  background-image: url(../img/sw-img0058-3-75BFF1B6-141F-4CC3-A7E7-0363715B935B.png);
   background-size: 100% 100%;
   height: 736px;
   left: 0px;
@@ -468,34 +473,34 @@
 }
 .sw .line-5-GE0XEQ {
   background-color: transparent;
-  height: 4px;
-  left: 1px;
+  height: 5px;
+  left: 38px;
   position: absolute;
-  top: 499px;
+  top: 568px;
   width: 944px;
 }
 .sw .line-5-kTiyrb {
   background-color: transparent;
-  height: 4px;
-  left: 1px;
+  height: 6px;
+  left: 38px;
   position: absolute;
-  top: 1049px;
+  top: 1187px;
   width: 944px;
 }
 .sw .line-5-sdxwGy {
   background-color: transparent;
-  height: 4px;
-  left: 2px;
+  height: 5px;
+  left: 39px;
   position: absolute;
-  top: 774px;
+  top: 878px;
   width: 944px;
 }
 .sw .line-5-zUixHA {
   background-color: transparent;
-  height: 4px;
-  left: 0px;
+  height: 5px;
+  left: 37px;
   position: absolute;
-  top: 166px;
+  top: 194px;
   width: 944px;
 }
 .sw .more00000-TVJ55C {
@@ -513,7 +518,7 @@
   position: relative;
   width: 84px;
 }
-.sw .na-5l5ivn {
+.sw .na-UOcbxe {
   background-color: transparent;
   color: var(--white);
   font-weight: 800;
@@ -525,6 +530,19 @@
   top: 300px;
   width: auto;
 }
+.sw .nalssam-5l5ivn {
+  background-color: transparent;
+  font-weight: 800;
+  height: auto;
+  left: 248px;
+  letter-spacing: 0.00px;
+  line-height: 29px;
+  position: absolute;
+  text-align: center;
+  top: 22px;
+  white-space: nowrap;
+  width: 118px;
+}
 .sw .nalssam-PZ5l3E {
   background-color: transparent;
   color: var(--sonic-silver);
@@ -535,19 +553,6 @@
   position: absolute;
   text-align: left;
   top: 57px;
-  white-space: nowrap;
-  width: auto;
-}
-.sw .nalssam-UOcbxe {
-  background-color: transparent;
-  color: var(--white);
-  font-weight: 800;
-  height: auto;
-  left: 248px;
-  line-height: 17px;
-  position: absolute;
-  text-align: center;
-  top: 18px;
   white-space: nowrap;
   width: auto;
 }
@@ -581,7 +586,7 @@
   color: var(--black);
   font-weight: 600;
   height: auto;
-  left: 84px;
+  left: 136px;
   line-height: 29px;
   position: absolute;
   text-align: center;
@@ -589,9 +594,9 @@
   white-space: nowrap;
   width: auto;
 }
-.sw .navbar-UOcbxe {
+.sw .navbar-5l5ivn {
   background-color: var(--cod-gray);
-  height: 53px;
+  height: 72px;
   left: 0px;
   position: absolute;
   top: 0px;
@@ -602,7 +607,7 @@
   height: 868px;
   left: 0px;
   position: absolute;
-  top: 3655px;
+  top: 3996px;
   width: 1440px;
 }
 .sw .stacked-group-W8YgeY {
@@ -610,21 +615,21 @@
   background-color: transparent;
   display: flex;
   flex-direction: row;
-  height: 97px;
+  height: 135px;
   justify-content: flex-start;
-  left: 183px;
+  left: 92px;
   position: relative;
   top: 23px;
   width: auto;
 }
 .sw .sw-logo-xd0wTK {
   background-color: transparent;
-  background-image: url(../img/sw-swlogo-CDA1FCD5-FC09-4C68-B38C-EFADE8323762@2x.png);
+  background-image: url(../img/hw-swlogo-E686EA96-EA4C-4FED-9A47-FBE30F28EC2D@2x.png);
   background-size: 100% 100%;
-  height: 97px;
+  height: 130px;
   margin: 0;
   position: relative;
-  width: 97px;
+  width: 130px;
 }
 .sw .textlabel-1gKIut {
   background-color: transparent;
@@ -648,7 +653,7 @@
   line-height: 27px;
   position: absolute;
   text-align: center;
-  top: 1323px;
+  top: 1423px;
   white-space: nowrap;
   width: auto;
 }
@@ -670,62 +675,62 @@
   color: var(--black);
   font-weight: 700;
   height: auto;
-  left: 9px;
+  left: 46px;
   line-height: 43px;
   position: absolute;
   text-align: left;
-  top: 566px;
+  top: 647px;
   white-space: nowrap;
-  width: auto;
+  width: 432px;
 }
 .sw .textlabel-sdxwGy {
   background-color: transparent;
   color: var(--black);
   font-weight: 700;
   height: auto;
-  left: 12px;
+  left: 49px;
   line-height: 43px;
   position: absolute;
   text-align: left;
-  top: 233px;
+  top: 272px;
   white-space: nowrap;
-  width: auto;
+  width: 367px;
 }
 .sw .textlabel-zUixHA {
   background-color: transparent;
   color: var(--black);
   font-weight: 800;
   height: auto;
-  left: 43px;
-  line-height: 72px;
+  left: 3px;
+  line-height: 87px;
   position: absolute;
   text-align: center;
   top: 0px;
   white-space: nowrap;
-  width: auto;
+  width: 972px;
 }
 .sw .top-word-hvAGCq {
   background-color: transparent;
-  height: 176px;
+  height: 198px;
   left: 0px;
   position: absolute;
   top: 0px;
-  width: 520px;
+  width: 624px;
 }
 .sw .view-C61RwL {
-  background-color: transparent;
-  height: 53px;
-  left: 0px;
-  position: absolute;
-  top: 0px;
-  width: 1440px;
-}
-.sw .view-VMr6Om {
   background-color: transparent;
   height: 736px;
   left: 0px;
   position: absolute;
-  top: 1433px;
+  top: 1550px;
+  width: 1440px;
+}
+.sw .view-VMr6Om {
+  background-color: transparent;
+  height: 72px;
+  left: 1px;
+  position: absolute;
+  top: 0px;
   width: 1440px;
 }
 .sw .vr-D44yGU {
@@ -771,10 +776,10 @@
   font-weight: 800;
   height: auto;
   left: -1px;
-  line-height: 72px;
+  line-height: 87px;
   position: absolute;
   text-align: center;
-  top: 32px;
+  top: 24px;
   width: auto;
 }
 .sw .x-zUixHA {
@@ -782,26 +787,26 @@
   color: var(--black);
   font-weight: 500;
   height: auto;
-  left: 14px;
+  left: 51px;
   line-height: 29px;
   position: absolute;
   text-align: left;
-  top: 1174px;
-  width: auto;
+  top: 1336px;
+  width: 821px;
 }
 .sw .x00001-xd0wTK {
   background-color: transparent;
-  height: 97px;
+  height: 135px;
   margin: 0 0 0 50px;
   position: relative;
-  width: 97px;
+  width: 135px;
 }
 .sw .x00002-xd0wTK {
   background-color: transparent;
-  height: 97px;
+  height: 135px;
   margin: 0 0 0 50px;
   position: relative;
-  width: 97px;
+  width: 135px;
 }
 .sw .x010-29-i7hrr4 {
   background-color: transparent;
@@ -856,8 +861,8 @@
 }
 .thebig {
   font-family: "AppleSDGothicNeo-ExtraBold", Helvetica, Arial, serif;
-  font-size: 60px;
-  letter-spacing: -4.50px;
+  font-size: 72px;
+  letter-spacing: -5.40px;
 }
 .thebigwhite {
   font-family: "AppleSDGothicNeo-Heavy", Helvetica, Arial, serif;
